[package]
name = "wormsign"
version = "0.1.2"
edition = "2021"

[dependencies]
rpassword = "7.2"
aes = "0.8.1"
ctr = "0.9.2"
sha3 = "0.10.1"
chrono = "0.4.26"
users = "0.11.0"
argon2 = "0.5.1"
toml = "0.8.19"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"

[features]
default = ["mode5", "aes", "random_signing"]
mode2 = []
mode3 = []
mode5 = []
aes = []
random_signing = []
