[package]
name = "wormsign"
version = "0.1.5"
edition = "2021"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "Dilithium5 signature tool"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/wormsign"
readme = "README.md"
categories = ["cryptography"]
keywords = ["pqc", "cli", "signature", "dilithium", "post-quantum-cryptography"]

[dependencies]
rpassword = "7.4.0"
aes = "0.8.1"
ctr = "0.9.2"
sha3 = "0.10.1"
zeroize = "1.8.1"
chrono = "0.4.26"
users = "0.11.0"
argon2 = "0.5.1"
toml = "0.9.2"
serde = { version = "1.0.29", features = ["derive"] }
rand = "0.8.5"

[features]
default = ["mode5", "aes", "random_signing"]
mode2 = []
mode3 = []
mode5 = []
aes = []
random_signing = []

[[bin]]
name = "wormsign-confgen"
path = "src/confgen.rs"

[[bin]]
name = "wormsign"
path = "src/main.rs"
