[package]
name = "wormsign"
version = "0.1.11"
edition = "2021"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "Dilithium5 signature tool"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/wormsign"
readme = "README.md"
categories = ["cryptography"]
keywords = ["pqc", "cli", "signature", "dilithium", "signing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rpassword = "7.4.0"
aes = "0.8.4"
ctr = "0.9.2"
sha3 = "0.10.8"
zeroize = "1.8.2"
chrono = "0.4.42"
users = "0.11.0"
argon2 = "0.5.3"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"

[features]
default = ["mode5", "aes", "random_signing"]
mode2 = []
mode3 = []
mode5 = []
aes = []
random_signing = []

[[bin]]
name = "wormsign-confgen"
path = "src/confgen.rs"

[[bin]]
name = "wormsign"
path = "src/main.rs"
